Improved support for Ubuntu 16 and MySQL 5.7.
---- Changes since 5.02 ----
Updated the Dolibarr script installer to version 3.9.1, and Wordpress to version 4.5.1.
---- Changes since 5.03 ----
Updated the Django script installer to version 1.9.6, FengOffice to 3.4.3, Roundcube to 1.2.1, phpMyAdmin to 4.6.3, 4.4.15.7 and 4.0.10.16, MediaWiki to 1.27.0, Rainloop to 1.10.2.145, Drupal to 8.1.7 and 7.50, Dolibarr to 3.9.3, TikiWiki to 15.2 and 12.9, Coppermine to 1.5.42, Wordpress to 4.5.3, Moodle to 3.1.1 and 2.9.6, DokuWiki to 2016-06-26, FosWiki to 2.1.2, ownCloud to 9.1.0, extPlorer to 2.1.9, SugarCRM to 6.5.24, and Typo3 to 6.2.26.
SSL versions 2 and 3 and TLS versions 1.0 and 1.0 are disabled by default in the Apache configuration for new domains.
In the post-installation wizard, if Virtualmin does not know the current MySQL pasword the admin will be prompted to enter it.
Added a config option to redirect HTTP requests to HTTPS for new domains (if they have an SSL website enabled).
Backups can now be deleted either from the Backup Logs page, or using the delete-backup API command.
---- Changes since 5.04 ----
Updated the Moodle script installer to version 2.9.8 and 3.1.2, Piwik to 2.16.5, Drupal to 8.1.10 and 7.51, osTicket to 1.9.14 and 1.8.12, Rainloop to 1.10.4.183, phpMyAdmin to 4.6.4, 4.0.10.17 and 4.4.15.8, Wordpress to 4.6.1, Joomla to 3.6.2, MediaWiki to 1.27.1, ZenPhoto to 1.4.13, eGroupware to 16.1.20161006, Mantis to 1.3.2, Magento to 2.1.1, Node.JS to 6.7.0, Typo3 to 6.2.27, IONcube to 6.0.5, FengOffice to 3.4.4.1, ownCloud to 9.1.1, SMF to 2.0.12, Roundcube to 1.2.2, and Pydio to 6.4.2.
Added a script installer for Nextcloud 10.0.1, a fork of ownCloud.
When using DNSSEC, the DS records that need to be created at your registrar are now displayed on the DNS Options page. If the parent domain is hosted by Virtualmin, the DS records will be added automatically.