@@ -1,0 +1,9 @@
+<header>Maximum top-level servers</header>
+
+This field allows you to impose a separate limit on the number of top-level
+virtual servers the reseller can create. These are domains that have their own
+administration login, not necessarily top-level DNS domains. Any limit on the
+total number of virtual servers will also apply. <p>
+
+<footer>
+
