@@ -3574,7 +3574,7 @@ newresels_intro=A reseller is a login that can create new parent Virtualmin serv
 newresels_name=Username
 newresels_desc=Description
 newresels_doms=Servers
-newresels_maxdoms=Max. servers
+newresels_maxdoms=Max servers
 newresels_quota=Total quota
 newresels_maxquota=Max. quota
 newresels_none=No resellers have been created yet.
@@ -3609,6 +3609,7 @@ resel_anydom=Allow any domain
 resel_max_doms=Maximum virtual servers
 resel_max_aliasdoms=Maximum alias servers
 resel_max_realdoms=Maximum non-alias servers
+resel_max_topdoms=Maximum top-level servers
 resel_unlimit=Unlimited
 resel_unlimit2=Unlimited for some domains
 resel_none=None
@@ -3623,6 +3624,7 @@ resel_ename=Missing or invalid reseller name - only letters, numbers and the cha
 reset_ewebmin=The login name <tt>webmin</tt> is reserved
 resel_emax_quota=Missing or invalid maximum quota
 resel_emax_doms=Missing or invalid maximum number of servers
+resel_emax_topdoms=Missing or invalid maximum number of top-level servers
 resel_emax_aliasdoms=Missing or invalid maximum number of alias servers
 resel_emax_realdoms=Missing or invalid maximum number of non-alias servers
 resel_emax_dbs=Missing or invalid maximum number of databases
