@@ -1546,3 +1546,4 @@ Backups can now be deleted either from the Backup Logs page, or using the delete
 Updated the Moodle script installer to version 2.9.8 and 3.1.2, Piwik to 2.16.5, Drupal to 8.1.10 and 7.51, osTicket to 1.9.14 and 1.8.12, Rainloop to 1.10.4.183, phpMyAdmin to 4.6.4, 4.0.10.17 and 4.4.15.8, Wordpress to 4.6.1, Joomla to 3.6.2, MediaWiki to 1.27.1, ZenPhoto to 1.4.13, eGroupware to 16.1.20161006, Mantis to 1.3.2, Magento to 2.1.1, Node.JS to 6.7.0, Typo3 to 6.2.27, IONcube to 6.0.5, FengOffice to 3.4.4.1, ownCloud to 9.1.1, SMF to 2.0.12, Roundcube to 1.2.2, and Pydio to 6.4.2.
 Added a script installer for Nextcloud 10.0.1, a fork of ownCloud.
 When using DNSSEC, the DS records that need to be created at your registrar are now displayed on the DNS Options page. If the parent domain is hosted by Virtualmin, the DS records will be added automatically.
+The number of top-level virtual servers a reseller is allowed to create can now be limited.
